...
) {
    val latestSaving = rememberUpdatedState(saving)
    val scope = rememberCoroutineScope()
    val state = rememberModalBottomSheetState(skipPartiallyExpanded = true,
        confirmValueChange = { it != SheetValue.Hidden || !latestSaving.value })
    ModalBottomSheet(
        modifier = Modifier.testTag("editor-sheet"),
        onDismissRequest = { if (!saving && !state.isVisible) onDismissRequest() },
        sheetState = state,
        properties = ModalBottomSheetProperties(shouldDismissOnBackPress = false),
        containerColor = MaterialTheme.colorScheme.background,
    ) {
        val imeVisible = WindowInsets.isImeVisible
...
